--- a/src/main/webapp/css/indexstyle.css
+++ b/src/main/webapp/css/indexstyle.css
@@ -222,13 +222,17 @@ label {
     display: none;
 }
 
+.checkbox {
+    width: 20px;
+    height: 25px;
+}
+
 input, button {
     border-radius: 5px;
     border: 1px solid #ccc;
     margin: 10px;
     padding: 4px;
 }
-
 
 input.button, button.button {
     display: inline-block;
@@ -807,6 +811,12 @@ td.middle-left {
     text-align: left;
 }
 
+table.clients-view input {
+    background-color: #eee !important;
+    border: none !important;
+    margin: 0 !important;
+}
+
 .width100 {
     width: 100%;
 }
@@ -817,6 +827,10 @@ td.middle-left {
 
 .width35 {
     width: 35%;
+}
+
+.width20 {
+    width: 20%;
 }
 
 .width15 {
